--- a/ProtienTrackerRedis/Views/Users/NewUser.cshtml
+++ b/ProtienTrackerRedis/Views/Users/NewUser.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ProtienTrackerRedis.Models.User
 @{
     ViewBag.Title = "NewUser";
 }
@@ -8,9 +8,10 @@
 @using (Html.BeginForm("Save", "Users", FormMethod.Post))
 {
     <p>User name:</p>
-    <input type="text" id="userName" name="userName" />
+    <input type="text" id="userName" name="userName" value="@Model.Name" />
     <p>Goal</p>
-    <input type="text" id="goal" name="goal" />
+    <input type="text" id="goal" name="goal" value="@Model.Goal" />
 
     <input type="submit" value="Save" />
+    <input type="hidden" name="userId" value="@Model.Id" />
 }
